# tree-sitter-sol

./: .gitignore  CMakeLists.txt  Cargo.toml  Package.swift  README.md  binding.gyp  check_multicall.js  debug.sol  debug2.sol  debug_abi_decode.sol  debug_array_tuple.sol  debug_cast.sol  debug_cast_call.sol  debug_parse.js  debug_return.sol  debug_selector.sol  debug_single_type.sol  debug_tree.js  debug_tuple.sol  debug_tuple_return.sol  debug_underscore.sol  debug_var.sol  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  test_contract.sol  test_output.txt  test_uniswap.js  tree-sitter.json
.github/: dependabot.yml
.github/workflows/: e2e.yml  validate.yml
bindings/c/: tree-sitter-solidity.h  tree-sitter-solidity.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_solidity/: __init__.py  __init__.pyi  binding.c
bindings/swift/TreeSitterSolidityTests/: TreeSitterSolidityTests.swift
src/: grammar.json  node-types.json  parser.c
test/corpus/: 01_basics.txt  02_pragma.txt  03_imports.txt  04_contracts.txt  05_state_variables.txt  06_functions.txt  07_statements.txt  08_expressions.txt  09_file_level.txt  10_advanced_features.txt  11_function_types.txt  12_array_types.txt
